[package]
name = "port-sniffer-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bpaf = {version = "0.7", features = ["derive", "bright-color"]}
